# LufsNormalizer

./: .gitignore  CMakeLists.txt  README.md  benchmark_fastlog.cpp
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AutoGain.cpp  AutoGain.h  Compressor.h  DspUtils.h  Expander.cpp  Expander.h  GainSmoother.cpp  GainSmoother.h  LufsMeter.cpp  LufsMeter.h  TruePeakLimiter.cpp  TruePeakLimiter.h
src/ui/: GainReductionMeter.cpp  GainReductionMeter.h  LevelHistory.cpp  LevelHistory.h  LufsDisplay.cpp  LufsDisplay.h
tests/: test_autogain.cpp  test_dsp_utils.cpp  test_expander.cpp
tests/mocks/juce_audio_basics/: juce_audio_basics.h
tests/mocks/juce_dsp/: juce_dsp.h
